# Mephisto

./: .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml
changelog.d/: +add add config and protocol.added  +add add follows decorator.added  +add add land decorator.added  +add add message cache service.added  +add add module and standard.added  +add daemon.added  +add page builder.added  +add ping.added  +add playwright service.added  +add session service.added  +add support no daemon.added  +add_basic_permission_system.added  +add_metadata_context.added  +add_temp_storage.added  +better_message_serialization.added  +change_orm_context.changed  +changed_deps_source.chore  +chore add avilla-console.chore  +chore add avilla-onebot-v11.chore  +chore add avilla-twilight avilla-console.chore  +chore add kayaku.chore  +chore cleanup.chore  +fix child process venv.fixed  +fix mephisto metadata.fixed  +fix_daemon_asgi_mounts.fixed  +fixed_typing.chore  +removed_message_caching.removed  +removed_qq_resources.removed  +retrieve_module_asset.added
mephisto/: __main__.py  daemon.py
mephisto/shared/: __init__.py  const.py  git.py  model.py  util.py  var.py
